# tiny-soft-renderer-rs

./: Cargo.toml  patch.diff
examples/: bresenham_line.rs  gltf-loader.rs  line_bresenham.rs  load_gltf.rs  rasterizer_demo.rs  triangle_barycentric.rs  triangle_sweep_line.rs
examples/load_gltf/: loader.rs  main.rs
src/: basetype.rs  color.rs  common.rs  lib.rs  line.rs  loader.rs  mesh.rs  pass.rs  pipelilne.rs  pipeline.rs  rasterizer.rs  renderer.rs  shader.rs  texture.rs  triangle.rs
src/common/: basetype.rs  color.rs
src/rasterizer/: line.rs  pass.rs  pipeline.rs  shader.rs  texture.rs  triangle.rs
