[package]
name = "tinyrenderer"
version = "0.1.0"
edition = "2021"
authors = ["rickkky <rickkky@foxmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.4"
rand = "0.8.5"

[dev-dependencies]
fltk = { version = "1.4.26", features = ["fltk-bundled"] }
gltf = "1.4.0"
