# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tinyrenderer"
version = "0.1.0"
edition = "2021"
authors = ["rickkky <rickkky@foxmail.com>"]

[workspace]
members = ["packages/*"]

[workspace.dependencies]
nalgebra = "0.32.4"
num-traits = "0.2.18"


[dependencies]
gltf = "1.4.0"
interpolate = { path = "packages/interpolate" }
interpolate_derive = { path = "packages/interpolate_derive" }
nalgebra = { workspace = true }
num-traits = { workspace = true }
rand = "0.8.5"

[dev-dependencies]
fltk = { version = "1.4.26", features = ["fltk-bundled"] }
